# avit-test-backend

./: .coverage  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/schemas/: __init__.py  auth.py  bookings.py  rooms.py  schedule.py  slots.py
app/api/v1/: auth.py  bookings.py  dependencies.py  dependes.py  rooms.py
app/core/: config.py  logging.py
app/infrastructure/: jwt_service.py
app/mappers/: booking.py  room.py  schedule.py  slot.py
app/schemas/: __init__.py  bookings.py  rooms.py  schedule.py  schemas_auth.py  slots.py
app/service/: service.py
app/storage/models/: __init__.py  base.py  booking.py  room.py  schedule.py  slot.py
app/storage/postgres/: db_hellper.py  db_helper.py
app/storage/repositories/: repositories.py
app/utils/: convert.py
migrations/: env.py
migrations/versions/: 02fcc2ec58d7_fix_default_time.py  54b2b5edac54_init.py  58588e2d3056_add_bookings.py  5dab9e978a42_add_user_id_in_booking.py  7cc50504b618_change_time_to_without_timezone.py  b9d2eac36f13_fix_default_time.py  bb1fcff323b5_fix_reloship_booking.py  e3f5c91aa6d1_fix_and_add_unique.py
test/integration/: test_booking_flow.py
test/locust/: locustfile.py
test/threadi/: locustfile.py
test/unit/service/: test_service.py
